buildpack.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s-app: hotcloud-buildpack
  name: hotcloud
