hot-cloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s-app: hot-cloud
  name: hot-cloud
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: hot-cloud
  name: hot-cloud
  namespace: hot-cloud
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    k8s-app: hot-cloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: hot-cloud
  name: hot-cloud
  namespace: hot-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: hot-cloud
  template:
    metadata:
      labels:
        k8s-app: hot-cloud
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
      containers:
        - image: yaolianhua/hotcloud:0.1.20211020102109
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: http
            periodSeconds: 10
            initialDelaySeconds: 10
          name: hot-cloud
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /hotcloud/config
              name: hot-cloud-volume
              readOnly: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      serviceAccountName: hot-cloud
      volumes:
        - configMap:
            name: hot-cloud-config
            items:
              - key: config
                path: application.yml
          name: hot-cloud-volume
