ingress-hotcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hotcloud
  namespace: hotcloud
spec:
  rules:
    - host: "hotcloud.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hotcloud
                port:
                  number: 8080
