ngcca-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: ngcca-web
  name: ngcca-web
  namespace: ngcca-system
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: http
  selector:
    k8s-app: ngcca-web
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngcca-web$DOT_SUFFIX_DOMAIN
  namespace: ngcca-system
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
    - host: ngcca-web$DOT_SUFFIX_DOMAIN
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ngcca-web
                port:
                  number: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: ngcca-web
  name: ngcca-web
  namespace: ngcca-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ngcca-web
  template:
    metadata:
      labels:
        k8s-app: ngcca-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
      containers:
        - image: $WEB_IMAGE
          imagePullPolicy: IfNotPresent
          name: ngcca-web
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            privileged: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
